outlined + type + select

--- a/digital/text-field.html
+++ b/digital/text-field.html
@@ -74,7 +74,7 @@
                                                     <div class="form__group form__group--filled"
                                                         :class="{'form__group--hasicon': option.icon, 'form__group--error': state === 'error'}"
                                                     >
-                                                        <label class="label form__group--defalt"
+                                                        <label class="label form__group--default"
                                                             :class="{
                                                                 'hasValue': value,
                                                                 'helper__group': option.counter && state === 'helper' || option.counter && state === 'error'
@@ -94,7 +94,30 @@
                                                         </label>
                                                     </div>
                                                 </div>
-                                                <div class="tab__content__pane p-20" :class="{'active': !tab}"></div>
+                                                <div class="tab__content__pane p-20" :class="{'active': !tab}">
+                                                    <div class="form__group form__group--outlined"
+                                                        :class="{'form__group--hasicon': option.icon, 'form__group--error': state === 'error'}"
+                                                    >
+                                                        <label class="label form__group--default"
+                                                            :class="{
+                                                                'hasValue': value,
+                                                                'helper__group': option.counter && state === 'helper' || option.counter && state === 'error'
+                                                            }"
+                                                        >
+                                                            <input type="email" class="form__group__input form__group__input--default" v-model="value">
+                                                            <div class="form__group__placeholder">請輸入 e-mail</div>
+                                                            <i class="form__group__icon icon"
+                                                                :class="{'icon-eyeon': state !== 'error', 'icon-exclamation-circle': state === 'error'}"
+                                                                v-if="option.icon"
+                                                            ></i>
+                                                            <span class="form__group__help"
+                                                                :class="{'form__group__help--highlight': state === 'error'}"
+                                                                v-if="state === 'helper' || state === 'error'"
+                                                            >* 此為必填欄位</span>
+                                                            <span class="form__group__counter" v-if="option.counter">0/30</span>
+                                                        </label>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="configuration">
@@ -171,23 +194,29 @@
                                                 <tr>
                                                     <td width="33.3333%">
                                                         <h4 class="mt-0 mb-20">Default</h4>
+                                                        <img src="../assets/system/type/textfield-filled-default.svg" width="230" alt="">
                                                     </td>
                                                     <td width="33.3333%">
                                                         <h4 class="mt-0 mb-20">Hover</h4>
+                                                        <img src="../assets/system/type/textfield-filled-hover.svg" width="230" alt="">
                                                     </td>
                                                     <td width="33.3333%">
                                                         <h4 class="mt-0 mb-20">Focused</h4>
+                                                        <img src="../assets/system/type/textfield-filled-focused.svg" width="230" alt="">
                                                     </td>
                                                 </tr>
                                                 <tr>
                                                     <td>
                                                         <h4 class="mt-0 mb-20">Activated</h4>
+                                                        <img src="../assets/system/type/textfield-filled-activated.svg" width="230" alt="">
                                                     </td>
                                                     <td>
                                                         <h4 class="mt-0 mb-20">Error</h4>
+                                                        <img src="../assets/system/type/textfield-filled-error.svg" width="230" alt="">
                                                     </td>
                                                     <td>
                                                         <h4 class="mt-0 mb-20">Disable</h4>
+                                                        <img src="../assets/system/type/textfield-filled-disable.svg" width="230" alt="">
                                                     </td>
                                                 </tr>
                                             </table>
@@ -197,23 +226,29 @@
                                                 <tr>
                                                     <td width="33.3333%">
                                                         <h4 class="mt-0 mb-20">Default</h4>
+                                                        <img src="../assets/system/type/select-filled-default.svg" width="140" alt="">
                                                     </td>
                                                     <td width="33.3333%">
                                                         <h4 class="mt-0 mb-20">Hover</h4>
+                                                        <img src="../assets/system/type/select-filled-hover.svg" width="140" alt="">
                                                     </td>
                                                     <td width="33.3333%">
                                                         <h4 class="mt-0 mb-20">Focused</h4>
+                                                        <img src="../assets/system/type/select-filled-focused.svg" width="140" alt="">
                                                     </td>
                                                 </tr>
                                                 <tr>
                                                     <td>
                                                         <h4 class="mt-0 mb-20">Activated</h4>
+                                                        <img src="../assets/system/type/select-filled-activated.svg" width="140" alt="">
                                                     </td>
                                                     <td>
                                                         <h4 class="mt-0 mb-20">Error</h4>
+                                                        <img src="../assets/system/type/select-filled-error.svg" width="140" alt="">
                                                     </td>
                                                     <td>
                                                         <h4 class="mt-0 mb-20">Disable</h4>
+                                                        <img src="../assets/system/type/select-filled-disable.svg" width="140" alt="">
                                                     </td>
                                                 </tr>
                                             </table>
@@ -229,23 +264,29 @@
                                                 <tr>
                                                     <td width="33.3333%">
                                                         <h4 class="mt-0 mb-20">Default</h4>
+                                                        <img src="../assets/system/type/textfield-outlined-default.svg" width="230" alt="">
                                                     </td>
                                                     <td width="33.3333%">
                                                         <h4 class="mt-0 mb-20">Hover</h4>
+                                                        <img src="../assets/system/type/textfield-outlined-hover.svg" width="230" alt="">
                                                     </td>
                                                     <td width="33.3333%">
                                                         <h4 class="mt-0 mb-20">Focused</h4>
+                                                        <img src="../assets/system/type/textfield-outlined-focused.svg" width="230" alt="">
                                                     </td>
                                                 </tr>
                                                 <tr>
                                                     <td>
                                                         <h4 class="mt-0 mb-20">Activated</h4>
+                                                        <img src="../assets/system/type/textfield-outlined-activated.svg" width="230" alt="">
                                                     </td>
                                                     <td>
                                                         <h4 class="mt-0 mb-20">Error</h4>
+                                                        <img src="../assets/system/type/textfield-outlined-error.svg" width="230" alt="">
                                                     </td>
                                                     <td>
                                                         <h4 class="mt-0 mb-20">Disable</h4>
+                                                        <img src="../assets/system/type/textfield-outlined-disable.svg" width="230" alt="">
                                                     </td>
                                                 </tr>
                                             </table>
@@ -255,23 +296,29 @@
                                                 <tr>
                                                     <td width="33.3333%">
                                                         <h4 class="mt-0 mb-20">Default</h4>
+                                                        <img src="../assets/system/type/select-outlined-default.svg" width="140" alt="">
                                                     </td>
                                                     <td width="33.3333%">
                                                         <h4 class="mt-0 mb-20">Hover</h4>
+                                                        <img src="../assets/system/type/select-outlined-hover.svg" width="140" alt="">
                                                     </td>
                                                     <td width="33.3333%">
                                                         <h4 class="mt-0 mb-20">Focused</h4>
+                                                        <img src="../assets/system/type/select-outlined-focused.svg" width="140" alt="">
                                                     </td>
                                                 </tr>
                                                 <tr>
                                                     <td>
                                                         <h4 class="mt-0 mb-20">Activated</h4>
+                                                        <img src="../assets/system/type/select-outlined-activated.svg" width="140" alt="">
                                                     </td>
                                                     <td>
                                                         <h4 class="mt-0 mb-20">Error</h4>
+                                                        <img src="../assets/system/type/select-outlined-error.svg" width="140" alt="">
                                                     </td>
                                                     <td>
                                                         <h4 class="mt-0 mb-20">Disable</h4>
+                                                        <img src="../assets/system/type/select-outlined-disable.svg" width="140" alt="">
                                                     </td>
                                                 </tr>
                                             </table>
