--- a/digital/color.html
+++ b/digital/color.html
@@ -25,10 +25,10 @@
                 <article class="col-md">
                     <section>
                         <h1 class="mt-0 mb-10">顏色 Color</h1>
-                        <p class="my-0">
+                        <p>
                             《天下雜誌》使用顏色來傳達界面中的功能，便於我們建立系統性視覺範本，讓《天下》數位產品與使用者的互動能夠更容易、更可以被預測。白、黑、藍、紅，是《天下》數位產品的顏色。顏色沒有先後順序，重要的是哪種顏色最適合傳達你想要的信息。
                         </p>
-                        <p class="h5 mb-0">
+                        <p class="h5">
                             ※ 點選顏色複製 hex 色碼
                         </p>
                     </section>
