--- a/graphic/color.html
+++ b/graphic/color.html
@@ -36,7 +36,7 @@
                             <li>天下的<span class="text-primary">定位</span>：廣義的財經雜誌（70%的報導是財經相關，30%是政治、社會、環境、教育、文化等）</li>
                             <li>天下的<span class="text-primary">性格</span>：冷靜、溫暖、帶來能量</li>
                         </ul>
-                        <div class="toggle__color mt-20 mb-5">
+                        <div class="toggle__color mb-5">
                             <button type="button" value="hex" class="item active">HEX</button>
                             <button type="button" value="rgb" class="item">RGB</button>
                         </div>
