--- a/digital/iconography.html
+++ b/digital/iconography.html
@@ -169,6 +169,9 @@
                                 </div>
                             </div>
                         </div>
+                        <a href="#!" class="btn btn--outlined w-100 px-30 mt-10 mb-30 text-left">
+                            <i class="icon icon-download mr-10"></i> icon.zip
+                        </a>
                     </section>
                 </article>
             </div>
