--- a/digital/radio-button.html
+++ b/digital/radio-button.html
@@ -78,8 +78,8 @@
                                     <p class="mt-10 mb-20">
                                         Checkboxes 有三種狀態
                                     </p>
-                                    <div class="table--scroll">
-                                        <table>
+                                    <div class="table--scroll text-center">
+                                        <table class="table-select">
                                             <tr>
                                                 <th width="25%">State</th>
                                                 <th width="25%">Default</th>
@@ -89,61 +89,25 @@
                                             <tr>
                                                 <td>Unselected</td>
                                                 <td>
-                                                    <label class="d-table mx-auto">
-                                                        <span class="label--radio">
-                                                            <input type="radio" name="blank1">
-                                                            <span class="label__radio__mark"></span>
-                                                            <span class="label__radio__txt"></span>
-                                                        </span>
-                                                    </label>
+                                                    <img src="../system/radio-type-default-unselected.svg" class="mx-auto" alt="">
                                                 </td>
                                                 <td>
-                                                    <label class="d-table mx-auto">
-                                                        <span class="label--radio active">
-                                                            <input type="radio" name="blank2">
-                                                            <span class="label__radio__mark"></span>
-                                                            <span class="label__radio__txt"></span>
-                                                        </span>
-                                                    </label>
+                                                    <img src="../system/radio-type-hover-unselected.svg" class="mx-auto" alt="">
                                                 </td>
                                                 <td>
-                                                    <label class="d-table mx-auto">
-                                                        <span class="label--radio">
-                                                            <input type="radio" disabled name="blank3">
-                                                            <span class="label__radio__mark"></span>
-                                                            <span class="label__radio__txt"></span>
-                                                        </span>
-                                                    </label>
+                                                    <img src="../system/radio-type-disable-unselected.svg" class="mx-auto" alt="">
                                                 </td>
                                             </tr>
                                             <tr>
                                                 <td>Selected</td>
                                                 <td>
-                                                    <label class="d-table mx-auto">
-                                                        <span class="label--radio">
-                                                            <input type="radio" checked name="blank4">
-                                                            <span class="label__radio__mark"></span>
-                                                            <span class="label__radio__txt"></span>
-                                                        </span>
-                                                    </label>
+                                                    <img src="../system/radio-type-default-selected.svg" class="mx-auto" alt="">
                                                 </td>
                                                 <td>
-                                                    <label class="d-table mx-auto">
-                                                        <span class="label--radio active">
-                                                            <input type="radio" checked name="blank5">
-                                                            <span class="label__radio__mark"></span>
-                                                            <span class="label__radio__txt"></span>
-                                                        </span>
-                                                    </label>
+                                                    <img src="../system/radio-type-hover-selected.svg" class="mx-auto" alt="">
                                                 </td>
                                                 <td>
-                                                    <label class="d-table mx-auto">
-                                                        <span class="label--radio">
-                                                            <input type="radio" checked disabled name="blank6">
-                                                            <span class="label__radio__mark"></span>
-                                                            <span class="label__radio__txt"></span>
-                                                        </span>
-                                                    </label>
+                                                    <img src="../system/radio-type-disable-selected.svg" class="mx-auto" alt="">
                                                 </td>
                                             </tr>
                                         </table>
