--- a/digital/checkbox.html
+++ b/digital/checkbox.html
@@ -78,8 +78,8 @@
                                     <p class="mt-10 mb-20">
                                         Checkboxes 有三種狀態
                                     </p>
-                                    <div class="table--scroll">
-                                        <table>
+                                    <div class="table--scroll text-center">
+                                        <table class="table-select">
                                             <tr>
                                                 <th width="25%">State</th>
                                                 <th width="25%">Default</th>
@@ -89,61 +89,25 @@
                                             <tr>
                                                 <td>Unselected</td>
                                                 <td>
-                                                    <label class="d-table mx-auto">
-                                                        <span class="label--check">
-                                                            <input type="checkbox" name="blank1">
-                                                            <span class="label__check__mark"></span>
-                                                            <span class="label__check__txt"></span>
-                                                        </span>
-                                                    </label>
+                                                    <img src="../system/checkbox-type-default-unselected.svg" class="mx-auto" alt="">
                                                 </td>
                                                 <td>
-                                                    <label class="d-table mx-auto">
-                                                        <span class="label--check active">
-                                                            <input type="checkbox" name="blank2">
-                                                            <span class="label__check__mark"></span>
-                                                            <span class="label__check__txt"></span>
-                                                        </span>
-                                                    </label>
+                                                    <img src="../system/checkbox-type-hover-unselected.svg" class="mx-auto" alt="">
                                                 </td>
                                                 <td>
-                                                    <label class="d-table mx-auto">
-                                                        <span class="label--check">
-                                                            <input type="checkbox" disabled name="blank3">
-                                                            <span class="label__check__mark"></span>
-                                                            <span class="label__check__txt"></span>
-                                                        </span>
-                                                    </label>
+                                                    <img src="../system/checkbox-type-disable-unselected.svg" class="mx-auto" alt="">
                                                 </td>
                                             </tr>
                                             <tr>
                                                 <td>Selected</td>
                                                 <td>
-                                                    <label class="d-table mx-auto">
-                                                        <span class="label--check">
-                                                            <input type="checkbox" checked name="blank1">
-                                                            <span class="label__check__mark"></span>
-                                                            <span class="label__check__txt"></span>
-                                                        </span>
-                                                    </label>
+                                                    <img src="../system/checkbox-type-default-selected.svg" class="mx-auto" alt="">
                                                 </td>
                                                 <td>
-                                                    <label class="d-table mx-auto">
-                                                        <span class="label--check active">
-                                                            <input type="checkbox" checked name="blank2">
-                                                            <span class="label__check__mark"></span>
-                                                            <span class="label__check__txt"></span>
-                                                        </span>
-                                                    </label>
+                                                    <img src="../system/checkbox-type-hover-selected.svg" class="mx-auto" alt="">
                                                 </td>
                                                 <td>
-                                                    <label class="d-table mx-auto">
-                                                        <span class="label--check">
-                                                            <input type="checkbox" checked disabled name="blank3">
-                                                            <span class="label__check__mark"></span>
-                                                            <span class="label__check__txt"></span>
-                                                        </span>
-                                                    </label>
+                                                    <img src="../system/checkbox-type-disable-selected.svg" class="mx-auto" alt="">
                                                 </td>
                                             </tr>
                                         </table>
