--- a/brand/specification.html
+++ b/brand/specification.html
@@ -68,7 +68,7 @@
                                 隨著資訊溝通化的時代來臨，有效運用圖形，符號及色彩等視覺語言，傳達特定意義的形象，提升大眾識別度及認同感，是一項重要的視覺傳達概念。
                             </p>
                             <div class="row">
-                                <div class="col-md-3 col-3">
+                                <div class="col-md-3 col-9">
                                     <h4 class="mt-0 mb-10">標準色</h4>
                                     <img src="../system/logo/1_cw-logo-red.svg" alt="">
                                     <p>
@@ -78,7 +78,7 @@
                                         PANTONE－186 C
                                     </p>
                                 </div>
-                                <div class="col-md-3 col-3">
+                                <div class="col-md-3 col-9">
                                     <h4 class="mt-0 mb-10">黑色</h4>
                                     <img src="../system/logo/1_cw-logo-grayscale-black.svg" alt="">
                                     <p>
@@ -104,29 +104,27 @@
                                 企業 CI 在任何應用上，均應以原設計之形象出現，使之易於識別及統一視覺形象；不得改變造型、顏色，而導致混淆企業識別形象。
                             </p>
                             <div class="row">
-                                <div class="col-md col-2 mb-20">
+                                <div class="col-md-4 col-6 mb-20">
                                     <h4 class="mt-0 mb-10">不可任意將 CI 加上任何框線</h4>
                                     <img src="../system/logo/prohibit-1.svg" alt="">
                                 </div>
-                                <div class="col-md col-2 mb-20">
+                                <div class="col-md-4 col-6 mb-20">
                                     <h4 class="mt-0 mb-10">不可任意更換 CI 顏色</h4>
                                     <img src="../system/logo/prohibit-2.svg" alt="">
                                 </div>
-                                <div class="col-md col-2 mb-20">
+                                <div class="col-md-4 col-6 mb-20">
                                     <h4 class="mt-0 mb-10">不可使用只有外框線的 CI</h4>
                                     <img src="../system/logo/prohibit-3.svg" alt="">
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md col-2 mb-20">
+                                <div class="col-md-4 col-6 mb-20">
                                     <h4 class="mt-0 mb-10">不可使用有外框線的 CI</h4>
                                     <img src="../system/logo/prohibit-4.svg" alt="">
                                 </div>
-                                <div class="col-md col-2 mb-20">
+                                <div class="col-md-4 col-6 mb-20">
                                     <h4 class="mt-0 mb-10">不可任意將 CI 用漸層方式呈現</h4>
                                     <img src="../system/logo/prohibit-5.svg" alt="">
                                 </div>
-                                <div class="col-md col-2">
+                                <div class="col-md col-6">
                                 </div>
                             </div>
                         </div>
@@ -136,7 +134,7 @@
                                 企業 CI 的排列順序為：天下／康健／親子／出版／學習
                             </p>
                             <div class="row">
-                                <div class="col-md-auto col-2 mb-20">
+                                <div class="col-md-auto col-6 mb-20">
                                     <h4 class="mt-0 mb-10">直式排列順序</h4>
                                     <img src="../system/logo/group-vertical.svg" alt="">
                                 </div>
