--- a/graphic/usage.html
+++ b/graphic/usage.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../assets/css/cw.css">
     <link rel="stylesheet" href="../assets/css/system.css">
 </head>
-<body>
+<body class="article-page">
     <header>
         <div class="container">
             <a class="logo" href="https://www.cw.com.tw/">
@@ -26,7 +26,7 @@
                     <section>
                         <h1 class="mt-0 mb-10">社群圖卡 Usage</h1>
                         <p>
-                            這是紙本顏色的段介紹。《天下雜誌》使用顏色來傳達界面中的功能，便於我們建立系統性視覺範本，讓《天下》紙本可以。白、黑、藍、紅，是《天下》數位產品的顏色。顏色沒有先後順序，重要的是哪種顏色最適合傳達你想要的信息。使用顏色來傳達界面中的功能，便於我們建立系統性視覺範本，
+                            這是社群圖卡的段介紹。
                         </p>
                     </section>
                     <section class="mb-40">
