--- a/digital/cookie.html
+++ b/digital/cookie.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../assets/css/system.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/highlight.min.js"></script>
 </head>
-<body>
+<body class="article-page">
     <header>
         <div class="container">
             <a class="logo" href="https://www.cw.com.tw/">
