--- a/digital/iconography.html
+++ b/digital/iconography.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../assets/css/cw.css">
     <link rel="stylesheet" href="../assets/css/system.css">
 </head>
-<body>
+<body class="article-page">
     <header>
         <div class="container">
             <a class="logo" href="https://www.cw.com.tw/">
