--- a/digital/tabs.html
+++ b/digital/tabs.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="../assets/css/system.css">
 </head>
 
-<body>
+<body class="article-page">
   <main>
     <nav class="navbar py-30">
       <div class="container">
